--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.2.1",
     "viem": "^2.21.54"
   },
   "devDependencies": {
